--- a/introduction.html
+++ b/introduction.html
@@ -97,7 +97,7 @@
             The Citizen-Facing Architecture provides a clear, logical, layered view of how UK government digital services interact within a complex environment. Each layer represents a distinct function, from citizen-facing channels to data and infrastructure, and shows how these layers work together to deliver secure, consistent, and accessible experiences.
         </p>
         <p class="govuk-body">
-            While the actual topology of government systems is far more complex, this architecture offers a simplified version to help users understand the key components and their relationships. It brings together operational services and planned innovations under one framework, making it easier for citizens to access what they need and for teams to design services that work across departments.
+            While the actual topology of government systems is far more complex, this architecture offers a simplified version to help users understand the key components and their relationships. It brings together operational services and planned innovations under one framework, simplifying access to information and helping teams design services that work across departments.
         </p>
     </main>
 </div>
