--- a/home.html
+++ b/home.html
@@ -19,7 +19,12 @@
       --panel:#f3f2f1;
     }
 
-    /* Layout */
+    /* ===== Product header ===== */
+    .app-product-header { background:#1d70b8; padding:40px 0; margin-bottom:0; }
+    .app-product-header__title { color:#fff; font-family:"GDS Transport", Arial, sans-serif; font-weight:700; font-size:48px; line-height:1.1; margin:0 0 15px 0; }
+    .app-product-header__description { color:#fff; font-family:"GDS Transport", Arial, sans-serif; font-size:22px; line-height:1.3; margin:0; }
+
+    /* ===== Layout (kept) ===== */
     .app-content-wrapper{display:flex;min-height:calc(100vh - 300px);} /* allow footer space */
     .app-sidebar{
       background:var(--panel);
@@ -34,15 +39,22 @@
     }
     .app-main-content{flex:1;padding:30px 40px;}
 
-    /* Top service nav */
-    .app-service-nav__list{display:flex;list-style:none;padding:0;margin:0;gap:40px;}
-    .app-service-nav__link{font-size:19px;font-weight:600;color:var(--ink);text-decoration:none;}
-    .app-service-nav__link:hover{text-decoration:underline;}
+    /* ===== Service nav (from reference) ===== */
+    .app-service-nav { background:#f3f2f1; border-bottom:1px solid #b1b4b6; }
+    .app-service-nav__list { list-style:none; margin:0; padding:0; display:flex; }
+    .app-service-nav__item { position:relative; }
+    .app-service-nav__link { display:block; padding:15px 20px; color:#1d70b8; text-decoration:none; font-family:"GDS Transport", Arial, sans-serif; font-size:16px; }
+    .app-service-nav__link:hover { background:#fff; text-decoration:underline; }
+    .app-service-nav__link--active { background:#fff; font-weight:700; border-bottom:4px solid #1d70b8; }
+    .app-service-nav__item--has-dropdown:hover .app-service-nav__dropdown { display:block; }
+    .app-service-nav__dropdown { display:none; position:absolute; top:100%; left:0; background:#fff; border:1px solid #b1b4b6; list-style:none; margin:0; padding:0; min-width:280px; z-index:100; box-shadow:0 2px 4px rgba(0,0,0,0.1); }
+    .app-service-nav__dropdown-link { display:block; padding:10px 15px; color:#1d70b8; text-decoration:none; font-family:"GDS Transport", Arial, sans-serif; font-size:14px; }
+    .app-service-nav__dropdown-link:hover { background:#f3f2f1; text-decoration:underline; }
 
-    /* Section spacing */
+    /* ===== Section spacing ===== */
     section{margin-bottom: 50px;}
 
-    /* Architecture diagram styles (from File 4) */
+    /* ===== Architecture diagram styles ===== */
     .architecture-diagram{display:grid;grid-template-columns:220px auto;gap:12px 20px;margin-top:30px;}
     .band-blue{background:var(--band-blue);} .band-teal{background:var(--band-teal);}    
     .layer-title{color:#fff;margin:0;display:flex;align-items:center;padding:10px;}
@@ -58,22 +70,48 @@
     .layer-business-logic .architecture-row{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:8px;}
     .layer-infrastructure .architecture-box{flex:1 1 100%;}
 
-    /* Active link highlighting (simple) */
+    /* ===== Sidebar link styles ===== */
     .app-sidebar a{color:#1d70b8;text-decoration:none;}
     .app-sidebar a:hover{text-decoration:underline;}
+
+    /* ===== Responsive ===== */
+    @media (max-width: 768px) {
+      .app-product-header__title { font-size: 34px; }
+      .app-main-content { padding:20px; }
+      .app-content-wrapper { flex-direction: column; }
+      .app-sidebar { width:100%; height:auto; position:static; border-right:none; border-bottom:1px solid #b1b4b6; }
+      .architecture-diagram{grid-template-columns:1fr;}
+    }
   </style>
 </head>
 <body class="govuk-template__body" id="top">
 <script>
   document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
 </script>
-<a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+<a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 
-<!-- GOV.UK Header -->
+<!-- ===== GOV.UK Header (EXACT structure adopted) ===== -->
 <header class="govuk-header" data-module="govuk-header">
   <div class="govuk-header__container govuk-width-container">
     <div class="govuk-header__logo">
-      <a href="#top" class="govuk-header__link govuk-header__link--homepage">GOV.UK</a>
+      <a href="/" class="govuk-header__link govuk-header__link--homepage">
+        <svg focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 324 60" height="30" width="162" fill="currentcolor" class="govuk-header__logotype" aria-label="GOV.UK">
+          <title>GOV.UK</title>
+          <g>
+            <circle cx="20" cy="17.6" r="3.7" />
+            <circle cx="10.2" cy="23.5" r="3.7" />
+            <circle cx="3.7" cy="33.2" r="3.7" />
+            <circle cx="31.7" cy="30.6" r="3.7" />
+            <circle cx="43.3" cy="17.6" r="3.7" />
+            <circle cx="53.2" cy="23.5" r="3.7" />
+            <circle cx="59.7" cy="33.2" r="3.7" />
+            <circle cx="31.7" cy="30.6" r="3.7" />
+            <path d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z" />
+          </g>
+          <circle class="govuk-logo-dot" cx="226" cy="36" r="7.3" />
+          <path d="M93.94 41.25c.4 1.81 1.2 3.21 2.21 4.62 1 1.4 2.21 2.41 3.61 3.21s3.21 1.2 5.22 1.2 3.61-.4 4.82-1c1.4-.6 2.41-1.4 3.21-2.41.8-1 1.4-2.01 1.61-3.01s.4-2.01.4-3.01v.14h-10.86v-7.02h20.07v24.08h-8.03v-5.56c-.6.8-1.38 1.61-2.19 2.41-.8.8-1.81 1.2-2.81 1.81-1 .4-2.21.8-3.41 1.2s-2.41.4-3.81.4a18.56 18.56 0 0 1-14.65-6.63c-1.6-2.01-3.01-4.41-3.81-7.02s-1.4-5.62-1.4-8.83.4-6.02 1.4-8.83a20.45 20.45 0 0 1 19.46-13.65c3.21 0 4.01.2 5.82.8 1.81.4 3.61 1.2 5.02 2.01 1.61.8 2.81 2.01 4.01 3.21s2.21 2.61 2.81 4.21l-7.63 4.41c-.4-1-1-1.81-1.61-2.61-.6-.8-1.4-1.4-2.21-2.01-.8-.6-1.81-1-2.81-1.4-1-.4-2.21-.4-3.61-.4-2.01 0-3.81.4-5.22 1.2-1.4.8-2.61 1.81-3.61 3.21s-1.61 2.81-2.21 4.62c-.4 1.81-.6 3.71-.6 5.42s.8 5.22.8 5.22Z" />
+        </svg>
+      </a>
     </div>
     <div class="govuk-header__content">
       <a href="#top" class="govuk-header__link govuk-header__service-name">Digital Architecture</a>
@@ -81,23 +119,43 @@
   </div>
 </header>
 
-<!-- Top Navigation Tabs -->
-<nav class="app-service-nav govuk-!-margin-bottom-3" style="background:#f3f2f1; border-bottom:1px solid #b1b4b6;">
+<!-- ===== Service Navigation ===== -->
+<nav class="app-service-nav">
   <div class="govuk-width-container">
     <ul class="app-service-nav__list">
-      <li><a href="#introduction" class="app-service-nav__link">Documentation</a></li>
-      <li><a href="#" class="app-service-nav__link">Support</a></li>
-      <li><a href="#contact" class="app-service-nav__link">Contact</a></li>
+      <li class="app-service-nav__item app-service-nav__item--has-dropdown">
+        <a class="app-service-nav__link app-service-nav__link--active" href="#introduction">Documentation</a>
+        <ul class="app-service-nav__dropdown">
+          <!-- Add dropdown items if required -->
+        </ul>
+      </li>
+      <li class="app-service-nav__item"><a class="app-service-nav__link" href="#">Support</a></li>
+      <li class="app-service-nav__item"><a class="app-service-nav__link" href="#contact">Contact</a></li>
     </ul>
   </div>
 </nav>
 
-<!-- Main Product Header -->
-<div class="app-product-header govuk-!-padding-top-6 govuk-!-padding-bottom-6" style="background:#1d70b8; color:#fff; text-align:center;">
-  <h1 class="govuk-heading-xl" style="color:#fff;">GOV.UK Digital Architecture</h1>
+<!-- ===== Phase Banner (Alpha) ===== -->
+<div class="govuk-width-container">
+  <div class="govuk-phase-banner">
+    <p class="govuk-phase-banner__content">
+      <strong class="govuk-tag govuk-phase-banner__content__tag">Alpha</strong>
+      <span class="govuk-phase-banner__text">
+        This page is an Alpha version and is not an official GOV.UK page and should only be used in the context of developing the content for future publication.
+      </span>
+    </p>
+  </div>
 </div>
 
-<!-- Content Wrapper -->
+<!-- ===== Product Header ===== -->
+<div class="app-product-header">
+  <div class="govuk-width-container">
+    <h1 class="app-product-header__title">GOV.UK Digital Architecture</h1>
+    <p class="app-product-header__description">A cross-government view of citizen-facing digital architecture</p>
+  </div>
+</div>
+
+<!-- ===== Content Wrapper ===== -->
 <div class="app-content-wrapper">
   <!-- Sidebar Navigation (in-page) -->
   <nav class="app-sidebar" aria-label="Section navigation">
@@ -114,15 +172,15 @@
   <!-- Main Content -->
   <main id="main-content" class="app-main-content">
 
-    <!-- SECTION: Introduction (File 1 was labelled Introduction but contained Contact content) -->
+    <!-- SECTION: Introduction -->
     <section id="introduction" aria-labelledby="intro-heading">
       <h2 id="intro-heading" class="govuk-heading-l">Introduction</h2>
-      <p class="govuk-body">The Citizen-Facing Architecture provides a clear, logical, layered view of how UK government digital services interact within a complex environment. Each layer represents a distinct function, from citizen-facing channels to data and infrastructure, and shows how these layers work together to deliver secure, consistent, and accessible experiences.
+      <p class="govuk-body">The Citizen-Facing Architecture provides a clear, logical, layered view of how UK government digital services interact within a complex environment. Each layer represents a distinct function, from citizen-facing channels to data and infrastructure, and shows how these layers work together to deliver secure, consistent, and accessible experiences. While the actual topology of government systems is far more complex, this architecture offers a simplified version to help users understand the key components and their relationships. It brings together operational services and planned innovations under one framework, simplifying access to information and helping teams design services that work across departments.
 
-While the actual topology of government systems is far more complex, this architecture offers a simplified version to help users understand the key components and their relationships. It brings together operational services and planned innovations under one framework, simplifying access to information and helping teams design services that work across departments.</p>
+Who this is for</p>
     </section>
 
-    <!-- SECTION: Who this is for (from File 2) -->
+    <!-- SECTION: Who this is for -->
     <section id="who-this-is-for" aria-labelledby="who-heading">
       <h2 id="who-heading" class="govuk-heading-l">Who this is for</h2>
       <p class="govuk-body">This view is designed for:</p>
@@ -134,7 +192,7 @@ While the actual topology of government systems is far more complex, this archit
       </ul>
     </section>
 
-    <!-- SECTION: How to use it (from File 3) -->
+    <!-- SECTION: How to use it -->
     <section id="how-to-use" aria-labelledby="how-heading">
       <h2 id="how-heading" class="govuk-heading-l">How to use it</h2>
       <p class="govuk-body">Use this architecture as:</p>
@@ -146,11 +204,10 @@ While the actual topology of government systems is far more complex, this archit
       </ul>
     </section>
 
-    <!-- SECTION: Citizen-facing reference architecture (from File 4) -->
+    <!-- SECTION: Citizen-facing reference architecture -->
     <section id="citizen-architecture" aria-labelledby="arch-heading">
       <h2 id="arch-heading" class="govuk-heading-l">Citizen-facing reference architecture</h2>
 
-      <!-- Architecture Diagram from File 4 -->
       <div class="architecture-diagram">
         <!-- Digital Channels -->
         <div class="govuk-heading-m layer-title band-blue">Citizen Facing Digital Channels</div>
@@ -252,10 +309,9 @@ While the actual topology of government systems is far more complex, this archit
           </div>
         </div>
       </div>
-      <!-- End Architecture Diagram -->
     </section>
 
-    <!-- SECTION: Contact us (from File 5) -->
+    <!-- SECTION: Contact us -->
     <section id="contact" aria-labelledby="contact-heading">
       <h2 id="contact-heading" class="govuk-heading-l">Get in touch</h2>
       <p class="govuk-body">For questions, feedback, or collaboration opportunities, please contact us at:</p>
@@ -266,17 +322,54 @@ While the actual topology of government systems is far more complex, this archit
   </main>
 </div>
 
-<!-- GOV.UK Footer -->
+<!-- ===== Footer (rich GOV.UK style) ===== -->
 <footer class="govuk-footer">
   <div class="govuk-width-container">
-    <p class="govuk-footer__meta">© Crown copyright</p>
+    <svg focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 60" height="30" width="32" fill="currentcolor" class="govuk-footer__crown">
+      <g>
+        <circle cx="20" cy="17.6" r="3.7" />
+        <circle cx="10.2" cy="23.5" r="3.7" />
+        <circle cx="3.7" cy="33.2" r="3.7" />
+        <circle cx="31.7" cy="30.6" r="3.7" />
+        <circle cx="43.3" cy="17.6" r="3.7" />
+        <circle cx="53.2" cy="23.5" r="3.7" />
+        <circle cx="59.7" cy="33.2" r="3.7" />
+        <circle cx="31.7" cy="30.6" r="3.7" />
+        <path d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z" />
+      </g>
+    </svg>
+    <div class="govuk-footer__meta">
+      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+        <h2 class="govuk-visually-hidden">Support links</h2>
+        <ul class="govuk-footer__inline-list">
+          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="#">Help</a></li>
+          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="#">Cookies</a></li>
+          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="#contact">Contact</a></li>
+          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="#">Terms and conditions</a></li>
+          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link" href="#">Accessibility statement</a></li>
+        </ul>
+        <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
+          <path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" />
+        </svg>
+        <span class="govuk-footer__licence-description">
+          All content is available under the
+          <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated
+        </span>
+      </div>
+      <div class="govuk-footer__meta-item">
+        <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
+          © Crown copyright
+        </a>
+      </div>
+    </div>
   </div>
 </footer>
 
-<!-- GOV.UK Frontend JS -->
-<script src="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.js"></script>
-<script>
-  window.GOVUKFrontend.initAll();
+<!-- ===== GOV.UK Frontend JavaScript (module) ===== -->
+<script type="module" src="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.js"></script>
+<script type="module">
+  import { initAll } from 'https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.js'
+  initAll()
 </script>
 </body>
 </html>
