--- a/home.html
+++ b/home.html
@@ -129,7 +129,6 @@
           <!-- Add dropdown items if required -->
         </ul>
       </li>
-      <li class="app-service-nav__item"><a class="app-service-nav__link" href="#">Support</a></li>
       <li class="app-service-nav__item"><a class="app-service-nav__link" href="#contact">Contact</a></li>
     </ul>
   </div>
@@ -141,7 +140,10 @@
     <p class="govuk-phase-banner__content">
       <strong class="govuk-tag govuk-phase-banner__content__tag">Alpha</strong>
       <span class="govuk-phase-banner__text">
-        This page is an Alpha version and is not an official GOV.UK page and should only be used in the context of developing the content for future publication.
+        This page is an Alpha version. For feedback, please email 
+        <a class="govuk-link" href="mailto:publicsector.architecture@dsit.gov.uk">
+          publicsector.architecture@dsit.gov.uk
+        </a>.
       </span>
     </p>
   </div>
@@ -259,21 +261,39 @@ Who this is for</p>
         </div>
 
         <!-- Business Logic -->
-        <div class="govuk-heading-m layer-title band-blue">Business Logic</div>
-        <div class="layer-band band-blue layer-business-logic">
-          <div class="architecture-row">
-            <div class="architecture-box">HMRC Tax System</div>
-            <div class="architecture-box">DVLA Drivers System</div>
-            <div class="architecture-box">DEFRA Grants &amp; Payments</div>
-            <div class="architecture-box">HMPO Apply for Passport</div>
-            <div class="architecture-box">MoJ Justice Services Suite</div>
-            <div class="architecture-box">DWP Universal Credit</div>
-            <div class="architecture-box">Home Office Right to Work</div>
-            <div class="architecture-box">Companies House Register Company</div>
-            <div class="architecture-box">HMRC Tax Free Childcare Account</div>
-            <div class="architecture-box">+++</div>
-          </div>
-        </div>
+      <div class="govuk-heading-m layer-title band-blue">Business Logic</div>
+<div class="layer-band band-blue layer-business-logic">
+  <div class="architecture-row">
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">HMRC Tax System</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">DVLA Drivers System</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">DEFRA Grants &amp; Payments</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">HMPO Apply for Passport</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">MoJ Justice Services Suite</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">DWP Universal Credit</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">Home Office Right to Work</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">Companies House Register Company</a>
+    </div>
+    <div class="architecture-box has-link">
+      <a href="https://www.gov.uk/" target="_blank" rel="noopener noreferrer">HMRC Tax Free Childcare Account</a>
+    </div>
+    <div class="architecture-box">+++</div>
+  </div>
+</div>
 
         <!-- Data -->
         <div class="govuk-heading-m layer-title band-teal">Data Layer</div>
