--- a/home.html
+++ b/home.html
@@ -261,6 +261,24 @@ Who this is for</p>
         </div>
 
         <!-- Business Logic -->
+        
+        <!--
+  <div class="govuk-heading-m layer-title band-blue">Business Logic</div>
+  <div class="layer-band band-blue layer-business-logic">
+    <div class="architecture-row">
+      <div class="architecture-box">HMRC Tax System</div>
+      <div class="architecture-box">DVLA Drivers System</div>
+      <div class="architecture-box">DEFRA Grants &amp; Payments</div>
+      <div class="architecture-box">HMPO Apply for Passport</div>
+      <div class="architecture-box">MoJ Justice Services Suite</div>
+      <div class="architecture-box">DWP Universal Credit</div>
+      <div class="architecture-box">Home Office Right to Work</div>
+      <div class="architecture-box">Companies House Register Company</div>
+      <div class="architecture-box">HMRC Tax Free Childcare Account</div>
+      <div class="architecture-box">+++</div>
+    </div>
+  </div>
+-->
       <div class="govuk-heading-m layer-title band-blue">Business Logic</div>
 <div class="layer-band band-blue layer-business-logic">
   <div class="architecture-row">
